--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@400;500;700&display=swap');
-
 :root{ 
     font-size: 62.5;
     position: fixed;
@@ -56,6 +54,10 @@ html, body{
 .flex-row{
     display: flex;
     flex-direction: column;
+}
+
+.card{
+    margin: 1.2rem;
 }
 
 
