--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,10 @@
 .form {
-    min-width: 150px;
-    max-width: 500px;
+    min-width: 9.3rem;
+    max-width: 13rem;
     width: 100%;
     margin: 1rem;
+    padding: 1rem;
+    justify-content: center;
   }
   
   .form-full-width {
