--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div id="home"  class="flex-center flex-row">
-        <mat-card class="card">
+       <div class="upload">
+          <mat-card class="card">
             <mat-card-header>
               <mat-card-title class="bold icon"><fa-icon [icon]="uploadIco"></fa-icon>{{uploadTitle}}</mat-card-title>
               <mat-card-subtitle class="medium">{{uploadSub}}</mat-card-subtitle>
@@ -9,61 +10,80 @@
               <button mat-raised-button class="btn">{{btnUploadTitle}}</button>
             </mat-card-content>
         </mat-card>
-        
+       </div>
+
+       <div class="inputs">
         <mat-card class="card">
-            <mat-card-header>
-              <mat-card-title class="bold">Shiba Inu</mat-card-title>
-              <mat-card-subtitle class ="medium">Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content class="regular">
+          <mat-card-header>
+            <mat-card-title class="bold icon"><fa-icon [icon]="infoIco"></fa-icon>{{infoTitle}}</mat-card-title>
+            <mat-card-subtitle class ="medium">{{infoSubtitle}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content class="regular">
 
-              <form class="form">
-                <mat-form-field class="form-full-width">
-                  <mat-label>Email</mat-label>
-                  <input matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
-                  <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                    Please enter a valid email address
-                  </mat-error>
-                  <mat-error *ngIf="emailFormControl.hasError('required')">
-                    Email is <strong>required</strong>
-                  </mat-error>
-                </mat-form-field>
-              </form>
+            <mat-divider></mat-divider>
 
-              <mat-divider></mat-divider>
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>Email</mat-label>
+                <input matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                  Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                  Email is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
 
-              <form class="form">
-                <mat-form-field class="form-full-width">
-                  <mat-label>Identification Number(RSA)</mat-label>
-                  <input matInput [formControl]="fIDNumberControl" placeholder="1234567890123">
-                  <mat-error *ngIf="fIDNumberControl.hasError('minLength') && !fIDNumberControl.hasError('required') && !fIDNumberControl.hasError('maxLength')" >
-                    Please enter a valid id number
-                  </mat-error>
-                  <mat-error *ngIf="fIDNumberControl.hasError('required')">
-                    ID is <strong>required</strong>
-                  </mat-error>
-                </mat-form-field>
-              </form>
+            <mat-divider></mat-divider>
 
-              <mat-divider></mat-divider>
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>Identification Number(RSA)</mat-label>
+                <input matInput [formControl]="fIDNumberControl" placeholder="1234567890123">
+                <mat-error *ngIf="fIDNumberControl.hasError('minLength') && !fIDNumberControl.hasError('required') && !fIDNumberControl.hasError('maxLength')" >
+                  Please enter a valid id number
+                </mat-error>
+                <mat-error *ngIf="fIDNumberControl.hasError('required')">
+                  ID is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
 
-              <form class="form">
-                <mat-form-field class="form-full-width">
-                  <mat-label>Name</mat-label>
-                  <input matInput [formControl]="fNameControl" placeholder="John">
-                  <mat-error *ngIf="fNameControl.hasError('minLength') && !fNameControl.hasError('required')">
-                    Please enter a valid name
-                  </mat-error>
-                  <mat-error *ngIf="fNameControl.hasError('required')">
-                    first name is <strong>required</strong>
-                  </mat-error>
-                </mat-form-field>
-              </form>
+            <mat-divider></mat-divider>
 
-              <mat-divider></mat-divider>
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>First Name</mat-label>
+                <input matInput [formControl]="fNameControl" placeholder="John">
+                <mat-error *ngIf="fNameControl.hasError('minLength') && !fNameControl.hasError('required')">
+                  Please enter a valid first name
+                </mat-error>
+                <mat-error *ngIf="fNameControl.hasError('required')">
+                  First name is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
+            
+            <mat-divider></mat-divider>
 
-            </mat-card-content>
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>Last Name</mat-label>
+                <input matInput [formControl]="fNameControl" placeholder="Doe">
+                <mat-error *ngIf="fNameControl.hasError('minLength') && !fNameControl.hasError('required')">
+                  Please enter a valid last name
+                </mat-error>
+                <mat-error *ngIf="fNameControl.hasError('required')">
+                  Last name is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
+
+            <mat-divider></mat-divider>
+         
+          </mat-card-content>
         </mat-card>
-
+       </div>
     </div>
-</div>
+  </div>
