--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,8 @@
               <mat-card-subtitle class="medium">{{uploadSub}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="regular">
-              <button mat-raised-button class="btn">{{btnUploadTitle}}</button>
+              <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="csvInputChange($event)" accept=".csv"/>
+              <button mat-raised-button class="btn" (click)="csvInput.click()">{{btnUploadTitle}}</button>
             </mat-card-content>
         </mat-card>
        </div>
@@ -37,7 +38,7 @@
 
             <mat-divider></mat-divider>
 
-            <form class="form">
+            <form class="form" id = "idNum">
               <mat-form-field class="form-full-width">
                 <mat-label>Identification Number(RSA)</mat-label>
                 <input matInput [formControl]="fIDNumberControl" placeholder="1234567890123">
