--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,6 +82,8 @@
             </form>
 
             <mat-divider></mat-divider>
+
+            <button id="submit"mat-raised-button class="btn" (click)="submitInfo()">{{btnSubmitTitle}}</button>
          
           </mat-card-content>
         </mat-card>
