--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div id="home"  class="flex-center flex-row">
+    <div id="home"  class="flex-center flex-column">
        <div class="upload">
           <mat-card class="card">
             <mat-card-header>
