Basic signup completed

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -48,7 +48,7 @@
                 <mat-divider></mat-divider>
 
                 <div id="buttons" class="flex-center flex-column">
-                    <button id="submit"mat-raised-button class="btn" >{{btnCreate}}</button>
+                    <button id="submit"mat-raised-button class="btn" (click)="signUp()" >{{btnCreate}}</button>
                 </div>
             </mat-card-content>
         </mat-card>
