Added validation to signup and error handling

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -27,8 +27,11 @@
                     <mat-form-field class="form-full-width">
                         <mat-label>Password</mat-label>
                         <input id="password" matInput [formControl]="fPasswordControl">
-                        <mat-error *ngIf="!fUsernameControl.hasError('required')">
-                            Please enter a valid password
+                        <mat-error *ngIf="fPasswordControl.hasError('minLength') && !fPasswordControl.hasError('required')">
+                            Password minimum lenght of 8 characters.
+                        </mat-error>
+                        <mat-error *ngIf="fPasswordControl.hasError('required')">
+                            password is <strong>required</strong>
                         </mat-error>
                     </mat-form-field>
                 </form>
@@ -38,9 +41,12 @@
                 <form class="form">
                     <mat-form-field class="form-full-width">
                         <mat-label>Password</mat-label>
-                        <input id="confirm-password" matInput [formControl]="fPasswordControl">
-                        <mat-error *ngIf="!fUsernameControl.hasError('required')">
-                            Please enter a valid password
+                        <input id="confirm-password" matInput [formControl]="fConfirmPWdControl">
+                        <mat-error *ngIf="fConfirmPWdControl.hasError('minLength') && !fConfirmPWdControl.hasError('required')">
+                            Password minimum lenght of 8 characters.
+                        </mat-error>
+                        <mat-error *ngIf="fConfirmPWdControl.hasError('required')">
+                            password is <strong>required</strong>
                         </mat-error>
                     </mat-form-field>
                 </form>
