--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,22 +20,6 @@
             <mat-card-subtitle class ="medium">{{infoSubtitle}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content class="regular">
-
-            <mat-divider></mat-divider>
-
-            <form class="form">
-              <mat-form-field class="form-full-width">
-                <mat-label>Email</mat-label>
-                <input id="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
-                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                  Please enter a valid email address
-                </mat-error>
-                <mat-error *ngIf="emailFormControl.hasError('required')">
-                  Email is <strong>required</strong>
-                </mat-error>
-              </mat-form-field>
-            </form>
-
             <mat-divider></mat-divider>
 
             <form class="form" id = "idNum">
@@ -71,12 +55,42 @@
             <form class="form">
               <mat-form-field class="form-full-width">
                 <mat-label>Last Name</mat-label>
-                <input id="last-name" matInput [formControl]="fNameControl" placeholder="Doe">
-                <mat-error *ngIf="fNameControl.hasError('minLength') && !fNameControl.hasError('required')">
+                <input id="last-name" matInput [formControl]="fLastControl" placeholder="Doe">
+                <mat-error *ngIf="fLastControl.hasError('minLength') && !fLastControl.hasError('required')">
                   Please enter a valid last name
                 </mat-error>
-                <mat-error *ngIf="fNameControl.hasError('required')">
+                <mat-error *ngIf="fLastControl.hasError('required')">
                   Last name is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
+
+            <mat-divider></mat-divider>
+
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>Contact Number</mat-label>
+                <input id="contact" matInput [formControl]="fContact" placeholder="0825430123">
+                <mat-error *ngIf="fContact.hasError('minLength') && !fContact.hasError('required')">
+                  Please enter a valid contact number
+                </mat-error>
+                <mat-error *ngIf="fContact.hasError('required')">
+                  contact number is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </form>
+
+            <mat-divider></mat-divider>
+
+            <form class="form">
+              <mat-form-field class="form-full-width">
+                <mat-label>Nationality</mat-label>
+                <input id="nat" matInput [formControl]="fNationality" placeholder="ZA">
+                <mat-error *ngIf="fNationality.hasError('minLength') && !fNationality.hasError('required')">
+                  Please enter a valid nationality
+                </mat-error>
+                <mat-error *ngIf="fNationality.hasError('required')">
+                  Nationality is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
             </form>
