--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
 
                 <div id="buttons" class="flex-center flex-row">
                     
-                    <button id="login-btn"mat-raised-button class="btn"  (click)="login()">{{btnLogin}}</button>
+                    <button id="login-btn"mat-raised-button class="btn" (click)="login()" routerLink={{routerLink}}>{{btnLogin}}</button>
                     <button id="signup-btn"mat-raised-button class="btn" routerLink="/signup">{{btnSignUp}}</button>
                 </div>
             </mat-card-content>
