--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,13 +5,13 @@
     bottom: 0;
     left: 0;
     right: 0;
-    overflow: hidden;
-    overflow-y: hidden;
+    overflow: auto;
+    overflow-y: auto;
     
 }
 
 html, body{
-    overflow: hidden;
+    overflow: auto;
     background-color: #333;
 }
 
