--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                 <form class="form">
                     <mat-form-field class="form-full-width">
                         <mat-label>Password</mat-label>
-                        <input id="password" matInput [formControl]="fPasswordControl">
+                        <input id="password" matInput [formControl]="fPasswordControl" [type]="'password'">
                         <mat-error *ngIf="!fUsernameControl.hasError('required')">
                             Please enter a valid password
                         </mat-error>
