--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
               <mat-card-subtitle class="medium">{{uploadSub}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content class="regular">
-              <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="csvInputChange($event)" accept=".csv .pdf"/>
+              <input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="inputChange($event)" accept=".csv .pdf"/>
               <button mat-raised-button class="btn" (click)="csvInput.click()">{{btnUploadTitle}}</button>
             </mat-card-content>
         </mat-card>
