--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+<div class="spinner">
+    <mat-spinner *ngIf="showSpinner"></mat-spinner>
+</div>
 <div class="container">
     <div id="home" class="flex-center flex-column">
         <mat-card class="card">
@@ -34,7 +37,7 @@
                     </form>
 
                 <div id="buttons" class="flex-center flex-row">
-                    <button id="login-btn"mat-raised-button class="btn" (click)="login()">{{btnLogin}}</button>
+                    <button id="login-btn"mat-raised-button class="btn" (click)="login()" (click)="loadLogin()">{{btnLogin}}</button>
                     <button id="signup-btn"mat-raised-button class="btn" routerLink="/signup">{{btnSignUp}}</button>
                 </div>
             </mat-card-content>
