--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         </mat-card>
        </div>
 
-       <div class="inputs">
+       <div class="inputs" id="inputs-div">
         <mat-card class="card">
           <mat-card-header>
             <mat-card-title class="bold icon"><fa-icon [icon]="infoIco"></fa-icon>{{infoTitle}}</mat-card-title>
