--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="spinner">
+  <mat-spinner *ngIf="showSpinner"></mat-spinner>
+</div>
 <div class="container">
     <div id="home"  class="flex-center flex-column">
        <div class="upload">
